# bipandoc

./: .gitignore  1.html  Abstract.hs  BX.hs  BXHelpers.hs  BiPandoc-Meeting-2.markdown  BiPandoc-Proposal.markdown  ChangeLog.md  Markdown.hs  README.md  TestBX.hs  TestConv.hs  abc.html  abc.md  bipandoc.cabal  bipandoc.hs  stack.yaml  test.md
BX/: BXHelpers.hs  HTMLBX.hs  Library.hs  MarkdownBX.hs
CST/: HTMLParser.hs  HTMLParserDataType.hs  Markdown.hs
HTML/: 1.html  HTMLParser.hs  TestPandoc.hs
Parser/: HTMLParser.hs  HTMLParserDataType.hs  Markdown.hs
Reader/: DocxReader.hs
doc/: BiPandoc-Proposal.markdown  docx_report.pptx  setup-config
doc/doc/html/bipandoc/bipandoc/: Abstract.html  BX-HTMLBX.html  BX-Library.html  BX-MarkdownBX.html  CST-HTMLParser.html  CST-HTMLParserDataType.html  CST-Markdown.html  Main.html  bipandoc.haddock  doc-index-60.html  doc-index-61.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  index.html  (+10 more)
summary/: docx_summary.md
tests/: 1.html  1_body.html  AppBody-Sample-English.docx  HTMLQuickCheck.hs  HTMLQuickCheck_restricted.hs  TestBX.hs  TestConv.hs  TestDocxReader.hs  abc.html  abc.md  all.md  blockquote.md  emph.md  indent.md  link.md  list.md  list2.md  list_test.docx  str_test.docx  test.md  test_docx.docx
(+8 files in other folders)
