name:                bipandoc
version:             0.0.1

-- homepage:            http://www.prg.nii.ac.jp/project/bigul/
license:             PublicDomain
license-file:        UNLICENSE
-- author:              
-- maintainer:          
-- category:            
build-type:          Simple
cabal-version:       >=1.22
-- extra-source-files:  CHANGELOG.md

library
  exposed-modules:     BX.BXHelpers
                       BX.HTMLBX
                       BX.MarkdownBX
                       Parser.HTMLParser
                       Parser.Markdown
--  other-modules:     
  default-extensions:  TemplateHaskell,
                       DeriveDataTypeable
  build-depends:       base ==4.8.*,
                       mtl >=2.2,
                       containers >=0.5,
                       template-haskell >=2.10,
                       th-extras >= 0.0.0.4,
                       BiGUL >= 1.0.0
  hs-source-dirs:      BX,Parser,.
  default-language:    Haskell2010
